// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`email generation > buildAnalysisDigestEmail > generates HTML snapshot correctly 1`] = `
"<!DOCTYPE html>
<html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>
    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; margin: 0; padding: 0; background-color: #f4f4f5; }
    .container { max-width: 560px; margin: 0 auto; background: #ffffff; border-radius: 12px; overflow: hidden; }
    .header { background: linear-gradient(135deg, #0f172a, #1e293b); padding: 32px 24px; text-align: center; }
    .header h1 { color: #ffffff; margin: 0; font-size: 24px; font-weight: 700; }
    .header p { color: #94a3b8; margin: 8px 0 0; font-size: 14px; }
    .content { padding: 24px; }
    .stat-grid { display: flex; flex-wrap: wrap; gap: 12px; margin: 16px 0; }
    .stat-card { flex: 1; min-width: 120px; background: #f8fafc; border-radius: 8px; padding: 16px; text-align: center; }
    .stat-value { font-size: 28px; font-weight: 700; color: #0f172a; }
    .stat-label { font-size: 12px; color: #64748b; text-transform: uppercase; letter-spacing: 0.5px; margin-top: 4px; }
    .highlight { color: #f59e0b; }
    .section-title { font-size: 16px; font-weight: 600; color: #0f172a; margin: 24px 0 12px; }
    .workout-item { background: #fef3c7; border-left: 4px solid #f59e0b; padding: 12px 16px; border-radius: 0 8px 8px 0; margin: 8px 0; }
    .workout-focus { font-weight: 600; color: #0f172a; }
    .workout-detail { font-size: 13px; color: #64748b; margin-top: 4px; }
    .cta { display: inline-block; background: #0f172a; color: #ffffff; text-decoration: none; padding: 12px 24px; border-radius: 8px; font-weight: 600; margin: 16px 0; }
    .footer { padding: 16px 24px; text-align: center; border-top: 1px solid #e2e8f0; }
    .footer p { font-size: 12px; color: #94a3b8; margin: 4px 0; }
    .footer a { color: #64748b; text-decoration: underline; }
    .progress-bar { background: #e2e8f0; border-radius: 999px; height: 8px; overflow: hidden; margin: 8px 0; }
    .progress-fill { height: 100%; border-radius: 999px; background: linear-gradient(90deg, #22c55e, #16a34a); }
  
    .lead { font-size: 16px; color: #334155; }
    .muted { font-size: 14px; color: #64748b; }
    .quote { background: #f8fafc; border-left: 4px solid #0f172a; padding: 12px 16px; border-radius: 0 8px 8px 0; margin: 16px 0; color: #334155; font-style: italic; }
    .pr-list { padding-left: 20px; margin: 8px 0; color: #334155; font-size: 14px; }
    .workout-meta { font-size: 13px; color: #64748b; margin-top: 4px; }
    .prose h2, .prose h3, .prose h4 { font-size: 15px; color: #0f172a; margin: 16px 0 6px; }
    .prose p, .prose li { font-size: 14px; color: #334155; line-height: 1.5; margin: 6px 0; }
    .prose ul, .prose ol { padding-left: 20px; margin: 8px 0; }
  </style></head>
<body style="background:#f4f4f5;padding:16px;">
<div class="container">
  <div class="header">
    <h1>Your training analysis</h1>
    <p>Race prediction and coach insights</p>
  </div>
  <div class="content">
    <p class="lead">Hey John, a fresh read on your training has landed:</p>
    <div class="section-title">Race prediction</div>
    <div class="stat-grid">
      <div class="stat-card">
        <div class="stat-value">1:30:00</div>
        <div class="stat-label">Medium confidence</div>
      </div>
    </div>
    <p class="muted" style="text-align:center;">Faster than <strong>62%</strong> of Open Men 35-39 · 1,200 results</p>
    <div class="workout-item">
      <div class="workout-focus">Readiness: Fresh</div>
      <div class="workout-detail">Hold the taper; one sharpener mid-week.</div>
    </div>
    <p class="muted">Prediction updated 2026-07-19.</p>
    <div class="section-title">Coach insights</div>
    <div class="prose"><ol>
<li><strong>Goal Progress</strong> — Six weeks out, 82% completion.</li>
<li><strong>Watch Outs</strong> — Sled push untouched for 24 days.</li>
</ol></div>
    <p class="muted">Insights updated 2026-07-20.</p>
    <div style="text-align:center;margin-top:24px;">
      <a href="https://fitai.coach/analytics" class="cta">Open your analytics</a>
    </div>
  </div>
  <div class="footer">
    <p>fitai.coach — Train Smarter with AI</p>
    <p><a href="https://fitai.coach/settings">Manage email preferences</a> &middot; <a href="https://fitai.coach/api/v1/emails/unsubscribe?token=dXNlci0x.176108ed6e0d2b92c8ccabf9dda0531cabff0f1b65715eaa6ccd2ec00e22c6ca">Unsubscribe</a></p>
  </div>
</div>
</body></html>"
`;

exports[`email generation > buildMissedWorkoutEmail > generates HTML snapshot correctly 1`] = `
"<!DOCTYPE html>
<html>
<head>
<style>
  body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; line-height: 1.6; color: #0f172a; max-width: 600px; margin: 0 auto; padding: 20px; }
  .header { text-align: center; margin-bottom: 30px; }
  .header h1 { color: #0f172a; margin-bottom: 5px; }
  .header p { color: #64748b; margin-top: 0; }
  .content { background: #f8fafc; padding: 24px; border-radius: 8px; }
  .workout-item { background: white; padding: 16px; margin-bottom: 12px; border-radius: 6px; border: 1px solid #e2e8f0; }
  .workout-focus { font-weight: 600; color: #0f172a; margin-bottom: 4px; }
  .workout-detail { color: #475569; font-size: 14px; margin-bottom: 8px; }
  .workout-date { color: #64748b; font-size: 12px; }
  .footer { margin-top: 30px; text-align: center; font-size: 12px; color: #94a3b8; }
  .footer p { margin: 4px 0; }
  .footer a { color: #64748b; text-decoration: underline; }
</style>
</head>
<body>
  <div class="header">
    <h1>Missed Workout Reminder</h1>
    <p>Don't let momentum slip away</p>
  </div>
  <div class="content">
    <p style="font-size:16px;color:#334155;">Hey John, you had 1 planned session that was missed:</p>

    <div class="workout-item">
      <div class="workout-focus">Strength</div>
      <div class="workout-detail">Squats, Deadlifts, Bench</div>
      <div class="workout-date">Oct 3 • Hyrox Base</div>
    </div>
    <p style="font-size:14px;color:#64748b;margin-top:16px;">Missing a session happens to everyone. The important thing is to get back on track. You can mark these as skipped or reschedule them in the app.</p>

    <div style="margin-top: 24px; text-align: center;">
      <a href="https://fitai.coach/" style="display: inline-block; background-color: #0f172a; color: white; padding: 12px 24px; text-decoration: none; border-radius: 6px; font-weight: 500;">View Timeline</a>
    </div>
  </div>
  <div class="footer">
    <p>fitai.coach — Train Smarter with AI</p>
    <p><a href="https://fitai.coach/settings">Manage email preferences</a> &middot; <a href="https://fitai.coach/api/v1/emails/unsubscribe?token=dXNlci0x.176108ed6e0d2b92c8ccabf9dda0531cabff0f1b65715eaa6ccd2ec00e22c6ca">Unsubscribe</a></p>
  </div>
</body>
</html>"
`;

exports[`email generation > buildTodaySessionEmail > generates HTML snapshot correctly 1`] = `
"<!DOCTYPE html>
<html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>
    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; margin: 0; padding: 0; background-color: #f4f4f5; }
    .container { max-width: 560px; margin: 0 auto; background: #ffffff; border-radius: 12px; overflow: hidden; }
    .header { background: linear-gradient(135deg, #0f172a, #1e293b); padding: 32px 24px; text-align: center; }
    .header h1 { color: #ffffff; margin: 0; font-size: 24px; font-weight: 700; }
    .header p { color: #94a3b8; margin: 8px 0 0; font-size: 14px; }
    .content { padding: 24px; }
    .stat-grid { display: flex; flex-wrap: wrap; gap: 12px; margin: 16px 0; }
    .stat-card { flex: 1; min-width: 120px; background: #f8fafc; border-radius: 8px; padding: 16px; text-align: center; }
    .stat-value { font-size: 28px; font-weight: 700; color: #0f172a; }
    .stat-label { font-size: 12px; color: #64748b; text-transform: uppercase; letter-spacing: 0.5px; margin-top: 4px; }
    .highlight { color: #f59e0b; }
    .section-title { font-size: 16px; font-weight: 600; color: #0f172a; margin: 24px 0 12px; }
    .workout-item { background: #fef3c7; border-left: 4px solid #f59e0b; padding: 12px 16px; border-radius: 0 8px 8px 0; margin: 8px 0; }
    .workout-focus { font-weight: 600; color: #0f172a; }
    .workout-detail { font-size: 13px; color: #64748b; margin-top: 4px; }
    .cta { display: inline-block; background: #0f172a; color: #ffffff; text-decoration: none; padding: 12px 24px; border-radius: 8px; font-weight: 600; margin: 16px 0; }
    .footer { padding: 16px 24px; text-align: center; border-top: 1px solid #e2e8f0; }
    .footer p { font-size: 12px; color: #94a3b8; margin: 4px 0; }
    .footer a { color: #64748b; text-decoration: underline; }
    .progress-bar { background: #e2e8f0; border-radius: 999px; height: 8px; overflow: hidden; margin: 8px 0; }
    .progress-fill { height: 100%; border-radius: 999px; background: linear-gradient(90deg, #22c55e, #16a34a); }
  
    .lead { font-size: 16px; color: #334155; }
    .muted { font-size: 14px; color: #64748b; }
    .quote { background: #f8fafc; border-left: 4px solid #0f172a; padding: 12px 16px; border-radius: 0 8px 8px 0; margin: 16px 0; color: #334155; font-style: italic; }
    .pr-list { padding-left: 20px; margin: 8px 0; color: #334155; font-size: 14px; }
    .workout-meta { font-size: 13px; color: #64748b; margin-top: 4px; }
    .prose h2, .prose h3, .prose h4 { font-size: 15px; color: #0f172a; margin: 16px 0 6px; }
    .prose p, .prose li { font-size: 14px; color: #334155; line-height: 1.5; margin: 6px 0; }
    .prose ul, .prose ol { padding-left: 20px; margin: 8px 0; }
  </style></head>
<body style="background:#f4f4f5;padding:16px;">
<div class="container">
  <div class="header">
    <h1>Today&#39;s training</h1>
    <p>2026-07-21</p>
  </div>
  <div class="content">
    <p class="lead">Hey John, here's what's on the plan for today:</p>

    <div class="workout-item">
      <div class="workout-focus">Threshold intervals</div>
      <div class="workout-meta">~55 min · RPE 7 · 06:30 · 12-week build</div>
      <div class="workout-detail">6x800m at 5k pace with 2 min jog recovery</div>
    </div>
    <p class="muted">Open the session to see the full prescription, log it, or move it to another day.</p>
    <div style="text-align:center;margin-top:24px;">
      <a href="https://fitai.coach/?workout=pd-1" class="cta">Open the session</a>
    </div>
  </div>
  <div class="footer">
    <p>fitai.coach — Train Smarter with AI</p>
    <p><a href="https://fitai.coach/settings">Manage email preferences</a> &middot; <a href="https://fitai.coach/api/v1/emails/unsubscribe?token=dXNlci0x.176108ed6e0d2b92c8ccabf9dda0531cabff0f1b65715eaa6ccd2ec00e22c6ca">Unsubscribe</a></p>
  </div>
</div>
</body></html>"
`;

exports[`email generation > buildWeeklyReviewReminderEmail > generates HTML snapshot correctly 1`] = `
"<!DOCTYPE html>
<html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>
    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; margin: 0; padding: 0; background-color: #f4f4f5; }
    .container { max-width: 560px; margin: 0 auto; background: #ffffff; border-radius: 12px; overflow: hidden; }
    .header { background: linear-gradient(135deg, #0f172a, #1e293b); padding: 32px 24px; text-align: center; }
    .header h1 { color: #ffffff; margin: 0; font-size: 24px; font-weight: 700; }
    .header p { color: #94a3b8; margin: 8px 0 0; font-size: 14px; }
    .content { padding: 24px; }
    .stat-grid { display: flex; flex-wrap: wrap; gap: 12px; margin: 16px 0; }
    .stat-card { flex: 1; min-width: 120px; background: #f8fafc; border-radius: 8px; padding: 16px; text-align: center; }
    .stat-value { font-size: 28px; font-weight: 700; color: #0f172a; }
    .stat-label { font-size: 12px; color: #64748b; text-transform: uppercase; letter-spacing: 0.5px; margin-top: 4px; }
    .highlight { color: #f59e0b; }
    .section-title { font-size: 16px; font-weight: 600; color: #0f172a; margin: 24px 0 12px; }
    .workout-item { background: #fef3c7; border-left: 4px solid #f59e0b; padding: 12px 16px; border-radius: 0 8px 8px 0; margin: 8px 0; }
    .workout-focus { font-weight: 600; color: #0f172a; }
    .workout-detail { font-size: 13px; color: #64748b; margin-top: 4px; }
    .cta { display: inline-block; background: #0f172a; color: #ffffff; text-decoration: none; padding: 12px 24px; border-radius: 8px; font-weight: 600; margin: 16px 0; }
    .footer { padding: 16px 24px; text-align: center; border-top: 1px solid #e2e8f0; }
    .footer p { font-size: 12px; color: #94a3b8; margin: 4px 0; }
    .footer a { color: #64748b; text-decoration: underline; }
    .progress-bar { background: #e2e8f0; border-radius: 999px; height: 8px; overflow: hidden; margin: 8px 0; }
    .progress-fill { height: 100%; border-radius: 999px; background: linear-gradient(90deg, #22c55e, #16a34a); }
  
    .lead { font-size: 16px; color: #334155; }
    .muted { font-size: 14px; color: #64748b; }
    .quote { background: #f8fafc; border-left: 4px solid #0f172a; padding: 12px 16px; border-radius: 0 8px 8px 0; margin: 16px 0; color: #334155; font-style: italic; }
    .pr-list { padding-left: 20px; margin: 8px 0; color: #334155; font-size: 14px; }
    .workout-meta { font-size: 13px; color: #64748b; margin-top: 4px; }
    .prose h2, .prose h3, .prose h4 { font-size: 15px; color: #0f172a; margin: 16px 0 6px; }
    .prose p, .prose li { font-size: 14px; color: #334155; line-height: 1.5; margin: 6px 0; }
    .prose ul, .prose ol { padding-left: 20px; margin: 8px 0; }
  </style></head>
<body style="background:#f4f4f5;padding:16px;">
<div class="container">
  <div class="header">
    <h1>Your week is wrapping up</h1>
    <p>2026-07-13 – 2026-07-19</p>
  </div>
  <div class="content">
    <p class="lead">Hey John, the training week closes tonight. Here's where it stands:</p>

    <div class="stat-grid">
      <div class="stat-card">
        <div class="stat-value">3<span style="font-size:14px;color:#64748b;"> / 4</span></div>
        <div class="stat-label">Sessions vs goal</div>
      </div>
      <div class="stat-card">
        <div class="stat-value">3<span style="font-size:14px;color:#64748b;"> of 4</span></div>
        <div class="stat-label">Plan days done</div>
      </div>
      <div class="stat-card">
        <div class="stat-value">2h 30m</div>
        <div class="stat-label">Total time</div>
      </div>
      <div class="stat-card">
        <div class="stat-value">6.5</div>
        <div class="stat-label">Avg RPE</div>
      </div>
    </div>
    <p class="muted">1 planned session didn't happen — the review is where you decide what to do about that.</p>
    <div class="section-title">🏆 New personal record</div>
    <ul class="pr-list"><li>Back squat — heaviest lift</li></ul>
    <div class="section-title">Last week you said</div>
    <div class="quote">“get three runs in”</div>
    <p class="muted">Did it happen? Two minutes on the review page turns this week into a plan for the next one.</p>
    <div style="text-align:center;margin-top:24px;">
      <a href="https://fitai.coach/review?week=2026-07-13" class="cta">Write this week&#39;s review</a>
    </div>
  </div>
  <div class="footer">
    <p>fitai.coach — Train Smarter with AI</p>
    <p><a href="https://fitai.coach/settings">Manage email preferences</a> &middot; <a href="https://fitai.coach/api/v1/emails/unsubscribe?token=dXNlci0x.176108ed6e0d2b92c8ccabf9dda0531cabff0f1b65715eaa6ccd2ec00e22c6ca">Unsubscribe</a></p>
  </div>
</div>
</body></html>"
`;

exports[`email generation > buildWeeklySummaryEmail > generates HTML snapshot correctly 1`] = `
"<!DOCTYPE html>
<html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>
    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; margin: 0; padding: 0; background-color: #f4f4f5; }
    .container { max-width: 560px; margin: 0 auto; background: #ffffff; border-radius: 12px; overflow: hidden; }
    .header { background: linear-gradient(135deg, #0f172a, #1e293b); padding: 32px 24px; text-align: center; }
    .header h1 { color: #ffffff; margin: 0; font-size: 24px; font-weight: 700; }
    .header p { color: #94a3b8; margin: 8px 0 0; font-size: 14px; }
    .content { padding: 24px; }
    .stat-grid { display: flex; flex-wrap: wrap; gap: 12px; margin: 16px 0; }
    .stat-card { flex: 1; min-width: 120px; background: #f8fafc; border-radius: 8px; padding: 16px; text-align: center; }
    .stat-value { font-size: 28px; font-weight: 700; color: #0f172a; }
    .stat-label { font-size: 12px; color: #64748b; text-transform: uppercase; letter-spacing: 0.5px; margin-top: 4px; }
    .highlight { color: #f59e0b; }
    .section-title { font-size: 16px; font-weight: 600; color: #0f172a; margin: 24px 0 12px; }
    .workout-item { background: #fef3c7; border-left: 4px solid #f59e0b; padding: 12px 16px; border-radius: 0 8px 8px 0; margin: 8px 0; }
    .workout-focus { font-weight: 600; color: #0f172a; }
    .workout-detail { font-size: 13px; color: #64748b; margin-top: 4px; }
    .cta { display: inline-block; background: #0f172a; color: #ffffff; text-decoration: none; padding: 12px 24px; border-radius: 8px; font-weight: 600; margin: 16px 0; }
    .footer { padding: 16px 24px; text-align: center; border-top: 1px solid #e2e8f0; }
    .footer p { font-size: 12px; color: #94a3b8; margin: 4px 0; }
    .footer a { color: #64748b; text-decoration: underline; }
    .progress-bar { background: #e2e8f0; border-radius: 999px; height: 8px; overflow: hidden; margin: 8px 0; }
    .progress-fill { height: 100%; border-radius: 999px; background: linear-gradient(90deg, #22c55e, #16a34a); }
  </style></head>
<body style="background:#f4f4f5;padding:16px;">
<div class="container">
  <div class="header">
    <h1>Weekly Training Summary</h1>
    <p>Oct 1 – Oct 7</p>
  </div>
  <div class="content">
    <p style="font-size:16px;color:#334155;">Hey John, here's how your week went:</p>

    <div class="stat-grid">
      <div class="stat-card">
        <div class="stat-value">3</div>
        <div class="stat-label">Completed</div>
      </div>
      <div class="stat-card">
        <div class="stat-value">75%</div>
        <div class="stat-label">Completion Rate</div>
      </div>
      <div class="stat-card">
        <div class="stat-value">2h 5m</div>
        <div class="stat-label">Total Time</div>
      </div>
    </div>

    <div class="section-title">Completion</div>
    <div class="progress-bar">
      <div class="progress-fill" style="width:75%"></div>
    </div>
    <p style="font-size:13px;color:#64748b;">3 of 4 planned sessions</p>

    <div class="stat-grid">
      <div class="stat-card">
        <div class="stat-value highlight">🔥 2</div>
        <div class="stat-label">Day Streak</div>
      </div>
      <div class="stat-card">
        <div class="stat-value highlight">🏆 1</div>
        <div class="stat-label">New PRs</div>
      </div>
    </div>

    <p style="font-size:14px;color:#64748b;margin-top:16px;">You missed 1 session this week. Don't worry — consistency over perfection!</p>

    <div style="text-align:center;margin-top:24px;">
      <a href="https://fitai.coach/review?week=Oct%201" class="cta">See your week in review</a>
    </div>
  </div>
  <div class="footer">
    <p>fitai.coach — Train Smarter with AI</p>
    <p><a href="https://fitai.coach/settings">Manage email preferences</a> &middot; <a href="https://fitai.coach/api/v1/emails/unsubscribe?token=dXNlci0x.176108ed6e0d2b92c8ccabf9dda0531cabff0f1b65715eaa6ccd2ec00e22c6ca">Unsubscribe</a></p>
  </div>
</div>
</body></html>"
`;
